@@ -1,0 +1,42 @@
+*.swp
+.DS_Store
+wesnoth
+wesnothd
+make_translation
+merge_translations
+Makefile
+autom4te.cache
+stamp-h1
+.libs
+config.h
+config.log
+config.status
+configure.lineno
+Makefile.in
+aclocal.m4
+config.h.in
+configure
+translations
+6not
+Debug
+wesnoth.exe
+fribidi.dll
+jpeg.dll
+libgettextlib.dll
+libgettextpo.dll
+libgettextsrc.dll
+libiconv2.dll
+libintl3.dll
+libpng13.dll
+SDL.dll
+SDL_image.dll
+SDL_mixer.dll
+SDL_net.dll
+freetype6.dll
+wesnoth.exp
+wesnoth.ilk
+wesnoth.lib
+wesnoth.ncb
+wesnoth.opt
+wesnoth.plg
+zlib1.dll
